--- a/css/styles.css
+++ b/css/styles.css
@@ -3,63 +3,36 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    min-height: 100vh;
-    background-color: #0c1920;
-}
-.container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
+/*body{
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    justify-content:space-around;
-    align-items:center;
-}
+    flex-wrap: wrap;
+}*/
 input{
-    z-index: 1;
-    width: 540px;
-    height: 90px;
-    font: 600 30px sans-serif;
-    cursor: pointer;
-    border-radius: 20px;
-    background: linear-gradient(45deg,cornflowerblue 0,#1abc9c 100%);
-    transition: all linear 0.3s;
+    margin: 10px;
+    padding: 5px;
 }
-input:hover{
-    background: linear-gradient(45deg,#4fc3dc 0,#96e5d5 100%);
-    transition: all linear 0.7s;
-    transform: scale(1.1);
+.board{
+    display: inline-block;
+    margin: 10px;
+    text-align: center;
+    border: 2px solid black;       
 }
-.bubles {
-    position: relative;
-    display: flex;
+.cell{
+    display: inline-block;
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
+    font-size: 29px;
+    vertical-align: middle;
 }
-.bubles span{
-    position: relative;
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    background-color: #4fc3dc;
-    margin: 0px 4px;
-    box-shadow: 0px 0px 0px 10px #4fc3dc44,
-    0px 0px 50px #4fc3dc,
-    0px 0px 100px #4fc3dc;
-    animation: animate 15s linear infinite;
-    animation-duration: calc(125s / var(--i));
+.white{
+    background-color: white;
+    color: black;
 }
-.bubles span:nth-child(even){
-    background-color: #ff2d75;
-    box-shadow: 0px 0px 0px 10px #ff2d7544,
-    0px 0px 50px #ff2d75,
-    0px 0px 100px #ff2d75;
-}
-@keyframes animate {
-    0%{
-        transform: translateY(100vh) scale(0);
-    }
-    100%{
-        transform: translateY(-10vh) scale(1);
-    }
+.black{
+    background-color: black;
+    color: white;
 }
